# handy-io

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
cpp/: CMakeLists.txt
src/handy_io/: __init__.py  calibration.py  capture.py  gaze.py  hands.py  heatmap.py  landmarks.py  main.py  pose.py  ui.py
tests/: test_imports.py
