[project]
name = "handy-io"
version = "0.1.0"
description = "Gesture-driven computer vision UI prototype for eye, face, and hand interaction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.1.0",
  "opencv-python>=4.10.0",
  "mediapipe>=0.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
handy-io = "handy_io.main:run"
